@@ -1,3 +1,9 @@
+2004-11-19  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Make libfuse and fusermount compatible with future versions
+
+	* fusermount: properly add mount options to /etc/mtab
+
 2004-11-15  Miklos Szeredi <miklos@szeredi.hu>
 
 	* fusermount: do not resolve last component of mountpoint on if it
